# embytes-buffer-async

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: cargo-publish.yml  test-action.yml
examples/: read_lines.rs
src/: inner.rs  lib.rs  mutex.rs  pipe.rs  reader.rs  testutils.rs  wakers.rs  writer.rs
tests/: test_read_write.rs
